sample/TypeError/t04.py
import math

num = 0
num = math.comb(5, 3)
print(num)

num = math.comb(5, 5)
print(num)

a = 1.5
num = math.comb(5, a)
print(num)
